@@ -24,7 +24,7 @@ Gmsh,fltk-1.3.5-source.tar.gz,,abn,LGPL,http://www.fltk.org/index.php,https://ww
 MED,med-4.1.1.tar.gz,lib,AK,LGPL,http://files.salome-platform.org,http://files.salome-platform.org/Salome/other/med-4.1.1.tar.gz,
 MED,hdf5-1.14.2.tar.gz,lib,ABN,BSD,http://www.hdfgroup.org/HDF5/,https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.14/hdf5-1.14.2/src/hdf5-1.14.2.tar.gz,
 SALOME,CurvePlot-9.4.0.tar.gz,lib,abn,LGPL,,https://sourceforge.net/projects/trust-platform/files/1.8.3/extra/CurvePlot-9.4.0.tar.gz,
-SALOME,configuration-9.11.0.tar.gz,lib,abn,,
+SALOME,configuration-9.12.0.tar.gz,lib,abn,,
 SALOME,xdata-9.6.0.tar.gz,lib,abn,LGPL,
 VisIt,VTK-8.1.0.tar.gz,,PL,BSD,,https://github.com/visit-dav/third-party/raw/master/lib/VTK-8.1.0.tar.gz?download=,
 VisIt,pyparsing-2.4.6.tar.gz,,SV,"MIT License",https://pypi.python.org/pypi/pyparsing,https://github.com/visit-dav/third-party/raw/master/lib/pyparsing-2.4.6.tar.gz?download=,
@@ -62,7 +62,7 @@ AmgX,nvc_get_devices.tgz,,GF,LGPL,http://files.salome-platform.org,http://downlo
 AmgX,AmgX_4d1bda0016.tar.gz,,PL,,,,
 AmgX,libcusparse.so.11.gz,,PL,,,,
 gnuplot,gnuplot-5.2.7.tar.gz,outil,AC,specifique,http://gnuplot.sourceforge.net/,http://sourceforge.net/projects/gnuplot/files/gnuplot/5.2.7/gnuplot-5.2.7.tar.gz/download,
-SALOME,medcoupling-9.11.0.tar.gz,,abn,LGPL,http://files.salome-platform.org,,
+SALOME,medcoupling-9.12.0.tar.gz,,abn,LGPL,http://files.salome-platform.org,,
 utils,bc-1.06.tar.gz,outil,GF,GPL,http://www.gnu.org/software/bc,http://ftp.gnu.org/gnu/bc/bc-1.06.tar.gz,
 utils,gawk-4.1.4.tar.gz,outil,GF,GPL,http://www.gnu.org/software/gawk,http://ftp.gnu.org/gnu/gawk/gawk-4.1.4.tar.gz,
 utils,ed-1.13.tar.lz,outil,GF,GPL,http://www.gnu.org/software/ed,http://ftp.gnu.org/gnu/ed/ed-1.13.tar.lz,
